@@ -2,21 +2,18 @@
 # version. It is meant to be modified by the bumpversion script.
 
 # The checkin date
-# $Format: "version_date=\"$ProjectDate$\""$ 
-version_date=$(echo "\$Date$" | sed -e 's/\$Date: \([0-9]*-[0-9]*-[0-9]*\) \([0-9]*:[0-9]*:[0-9]*\).*\$/\1 \2/')
+version_date=$(echo "\$Date$" | sed -e 's/\$Date: \([0-9]*-[0-9]*-[0-9]*\).*\$/\1/')
+
+# The checkin time
+version_time=$(echo "\$Date$" | sed -e 's/\$Date: \([0-9]*-[0-9]*-[0-9]*\) \([0-9]*:[0-9]*:[0-9]*\).*\$/\2/')
 
 # The checkin revision
-# $Format: "version_revision=\"$ProjectVersion$\""$ 
 version_revision=$(echo "\$Revision$" | sed -e 's/\$Revision: \([0-9][0-9]*\) *\$/\1/')
 
-# The version type: dev, stable, maint release
-# $Format: "version_type=\"$ReleaseType$\""$ 
+# The version type: dev, stable, maintenance, release
 version_type="dev"
 
 # The version number information
-# $Format: "version_micro=\"$ReleaseMicro$\""$ 
 version_micro=12
-# $Format: "version_minor=\"$ReleaseMinor$\""$ 
 version_minor=2
-# $Format: "version_major=\"$ReleaseMajor$\""$ 
 version_major=3
