@@ -1,6 +1,13 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+02-Oct-2005 (Lars Duening)  (3.2.12-dev.726)
+  - (main.c, lex.c, version.sh) Updated to display the correct revision
+      number.
+  - (interpret.c) put_c_string() incremented the target location pointer
+      before storing, causing memory corruption. Luckily it was used
+      just by the TLS package so far.
+
 28-Sep-2005 (Lars Duening)
   - (doc/efun/clone_object) Clarified the variable initialisation.
 
